# routes/authRoute.js
@@ -1,7 +1,13 @@
 const router = require("express").Router();
-const { login, register } = require("../controller/authController");
+const {
+  login,
+  register,
+  getUserInfo,
+} = require("../controller/authController");
+const validatingToken = require("../middleware/validatingToken");
 
 router.post("/login", login);
 router.post("/register", register);
+router.get("/userInfo", validatingToken, getUserInfo);
 
 module.exports = router;
